Closed
Bug 183912
Opened 23 years ago
Closed 23 years ago
[gtk2] embedding widget crashes with gtk 2.1.3
Categories
(Core Graveyard :: Embedding: GTK Widget, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
People
(Reporter: blizzard, Assigned: blizzard)
References
Details
(Keywords: crash)
Attachments
(1 file)
|
1.28 KB,
patch
|
timeless
:
review+
bryner
:
superreview+
asa
:
approval1.3a+
|
Details | Diff | Splinter Review |
The embedding widget crashes with gtk 2.1.3. There's a warning as well:
(TestGtkEmbed:13480): GLib-GObject-CRITICAL **: file gvaluetypes.c: line 803
(g_value_get_pointer): assertion `G_VALUE_HOLDS_POINTER (value)' failed
This exposes a long standing problem with the embedding widget.
| Assignee | ||
Comment 1•23 years ago
|
||
Fix the types for the signals.
| Assignee | ||
Updated•23 years ago
|
Attachment #108489 -
Flags: superreview?(bryner)
Attachment #108489 -
Flags: review+
Updated•23 years ago
|
Attachment #108489 -
Flags: superreview?(bryner) → superreview+
| Assignee | ||
Comment 2•23 years ago
|
||
Comment on attachment 108489 [details] [diff] [review]
patch
Asking for approval. Risk here is pretty low but I want to get this into the
field during alpha in case there are compatibility problems.
Attachment #108489 -
Flags: approval1.3a?
Comment 3•23 years ago
|
||
Comment on attachment 108489 [details] [diff] [review]
patch
a=asa for checkin to 1.3a
Attachment #108489 -
Flags: approval1.3a? → approval1.3a+
| Assignee | ||
Comment 4•23 years ago
|
||
Checked in.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Updated•13 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•