Bug #183912.  embedding widget crashes with gtk 2.1.3.  Make sure that the types for the signal marshalers match. r=timeless, sr=bryner, a=asa