embedding/browser/gtk/src/gtkmozembed2.cpp
@@ -327,7 +327,7 @@ gtk_moz_embed_class_init(GtkMozEmbedClass *klass)
 		   GET_OBJECT_CLASS_TYPE(klass),
 		   GTK_SIGNAL_OFFSET(GtkMozEmbedClass, progress_all),
 		   gtkmozembed_VOID__POINTER_INT_INT,
-		   GTK_TYPE_NONE, 3, GTK_TYPE_STRING,
+		   GTK_TYPE_NONE, 3, GTK_TYPE_POINTER,
 		   GTK_TYPE_INT, GTK_TYPE_INT);
   moz_embed_signals[NET_STATE] =
     gtk_signal_new("net_state",
@@ -342,7 +342,7 @@ gtk_moz_embed_class_init(GtkMozEmbedClass *klass)
 		   GET_OBJECT_CLASS_TYPE(klass),
 		   GTK_SIGNAL_OFFSET(GtkMozEmbedClass, net_state_all),
 		   gtkmozembed_VOID__POINTER_INT_UINT,
-		   GTK_TYPE_NONE, 3, GTK_TYPE_STRING,
+		   GTK_TYPE_NONE, 3, GTK_TYPE_POINTER,
 		   GTK_TYPE_INT, GTK_TYPE_UINT);
   moz_embed_signals[NET_START] =
     gtk_signal_new("net_start",
@@ -385,7 +385,7 @@ gtk_moz_embed_class_init(GtkMozEmbedClass *klass)
 		   GET_OBJECT_CLASS_TYPE(klass),
 		   GTK_SIGNAL_OFFSET(GtkMozEmbedClass, open_uri),
 		   gtk_marshal_BOOL__POINTER,
-		   GTK_TYPE_BOOL, 1, GTK_TYPE_STRING);
+		   GTK_TYPE_BOOL, 1, GTK_TYPE_POINTER);
   moz_embed_signals[SIZE_TO] =
     gtk_signal_new("size_to",
 		   GTK_RUN_LAST,
